--- a/index.html
+++ b/index.html
@@ -29,13 +29,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Selecao
-  * Updated: Sep 18 2023 with Bootstrap v5.3.2
-  * Template URL: https://bootstrapmade.com/selecao-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -52,15 +45,15 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto active" href="/">Home</a></li>
           <li class="dropdown"><a class="nav-link scrollto" href="#"><span>About</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="#">About Us</a></li>
+            <li><a href="/about.html">About Us</a></li>
             <li><a href="#">Our Vision</a></li>
           </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#services">Our Initiatives</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Our Impact</a></li>
+          <li><a class="nav-link scrollto" href="#">Our Initiatives</a></li>
+          <li><a class="nav-link scrollto " href="#">Our Impact</a></li>
           <li class="dropdown"><a class="nav-link scrollto" href="#"><span>Get Involved</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Volunteer with Us</a></li>
@@ -68,8 +61,8 @@
             <li><a href="#">Partner with Us</a></li>
           </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#team">Media</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Donation</a></li>
+          <li><a class="nav-link scrollto" href="#">Media</a></li>
+          <li><a class="nav-link scrollto" href="#">Donation</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -586,9 +579,8 @@
     <!-- End F.A.Q Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <!-- <section id="team" class="team">
       <div class="container">
-
         <div class="section-title" data-aos="zoom-out">
           <h2>Team</h2>
           <p>Our Hardworking Team</p>
@@ -609,7 +601,7 @@
               </div>
               <div class="member-info">
                 <h4>Murari Chauhan</h4>
-                <span>Chief of NGO</span>
+                <span>Member</span>
               </div>
             </div>
           </div>
@@ -617,7 +609,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="" class="img-fluid" alt="">
+                <img src="./assets/img/team/team.jpeg" class="img-fluid" alt="">
                 <div class="social">
                   <a href=""><i class="bi bi-twitter"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -626,8 +618,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Murari Chauhan</h4>
-                <span>Head of NGO</span>
+                <h4>Sushma Kumari</h4>
+                <span>Member of NGO</span>
               </div>
             </div>
           </div>
@@ -671,7 +663,8 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section> -->
+    <!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -689,7 +682,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Dubha, Sakra, Muzaffarpur</p>
+                <p>WARD NO-06. DUBHA BUZURG. PS-SAKRA, Muzaffarpur' Bihar. 843104</p>
               </div>
 
               <div class="email">
@@ -701,7 +694,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+91 6203147160</p>
+                <p>+91 8340787960</p>
               </div>
 
             </div>
