--- a/index.html
+++ b/index.html
@@ -57,11 +57,10 @@
           <li class="dropdown"><a class="nav-link scrollto" href="#"><span>Get Involved</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Volunteer with Us</a></li>
-            <li><a href="#">Donation</a></li>
             <li><a href="#">Partner with Us</a></li>
           </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#">Media</a></li>
+          <li><a class="nav-link scrollto" href="media.html">Media</a></li>
           <li><a class="nav-link scrollto" href="#">Donation</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -427,7 +426,7 @@
       <div class="container">
 
         <div class="section-title" data-aos="zoom-out">
-          <h2>Testimonials</h2>
+          <h2>Our Team</h2>
           <p>What they are saying about us</p>
         </div>
 
