--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <li><a href="#">Partner with Us</a></li>
           </ul>
           </li>
-          <li><a class="nav-link scrollto" href="media.html">Media</a></li>
+          <li><a class="nav-link scrollto" href="/media.html">Media</a></li>
           <li><a class="nav-link scrollto" href="#">Donation</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
